# Honeycomb

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE.txt  Main.qml  README.md  conan_profile_msvc_utf8  conanfile.txt  electron-builder.json5  index.html  logo.icns  main.cpp  package.json
.github/workflows/: build-windows.yml  pack.yml
.qtcreator/: CMakeLists.txt.user.0633d6c
.qtcreator/qtc-cmake-presets-UFYzLZKQ/conan-release/: CMakeLists.txt
.qtcreator/qtc-cmake-presets-UFYzLZKQ/conan-release/qtc-cmake-qmake-probe/: CMakeLists.txt
cmake/: Info.plist.in
electron/main/: index.ts
electron/preload/: index.ts
i18n/: en_US.js  i18n.js  zh_CN.js
sdk/NSIS/: Honeycomb.nsi  _fix_branding.py  _fix_encoding.py  build.cmd
src/: AESCrypto.cpp  AESCrypto.h  AgentPromptManager.cpp  AgentPromptManager.h  App.vue  BarcodeGenerator.cpp  BarcodeGenerator.h  ColorPicker.cpp  ColorPicker.h  ColorSelector.cpp  ColorSelector.h  DNSLookupTool.cpp  DNSLookupTool.h  EnvironmentPathTool.cpp  EnvironmentPathTool.h  FakeApiServer.cpp  FakeApiServer.h  FileHashCalculator.cpp  FileHashCalculator.h  FileUtilityTool.cpp  FileUtilityTool.h  FolderHttpServer.cpp  FolderHttpServer.h  JsonYamlConverter.cpp  JsonYamlConverter.h  MD5Generator.cpp  MD5Generator.h  MQTTListener.cpp  MQTTListener.h  MQTTPublisher.cpp  MQTTPublisher.h  OpenAIClient.cpp  OpenAIClient.h  PasswordStrengthGenerator.cpp  PasswordStrengthGenerator.h  ProcessManagerTool.cpp  ProcessManagerTool.h  QRCodeGenerator.cpp  QRCodeGenerator.h  QRCodeScanner.cpp  (+43 more)
src/components/: Menu.vue  Tool.vue
src/types/: global.d.ts  jsmpeg.d.ts
tests/: ReleaseMetadataTest.cmake  UpdateCheckerTest.cpp  WindowElementInspectorIntegrationTest.cmake
windows/: AESCryptoWindow.qml  AIPromptWindow.qml  AboutWindow.qml  AgentPromptWindow.qml  AiTextReducerWindow.qml  AsciiTableWindow.qml  AsmRefWindow.qml  BarcodeWindow.qml  Base64ImagePreviewWindow.qml  BatchBarcodeWindow.qml  BrTagWindow.qml  CaseConvertWindow.qml  ChangelogWindow.qml  ColorConverterWindow.qml  ColorPickerWindow.qml  ColorSelectorWindow.qml  ComplementWindow.qml  ContentTypeWindow.qml  ContextFloatWindow.qml  CronParserWindow.qml  DNSLookupWindow.qml  DockerToolWindow.qml  EnvironmentPathWindow.qml  FakeApiWindow.qml  FeedbackWindow.qml  FileBase64Window.qml  FileChecksumWindow.qml  FileHashWindow.qml  FileInfoWindow.qml  FileMD5Window.qml  FileSHA1Window.qml  FileSHA256Window.qml  FolderMappingWindow.qml  GoCrossWindow.qml  HarmonyPermissionWindow.qml  HelpWindow.qml  HtaccessNginxWindow.qml  HtmlCharWindow.qml  HtmlColorWindow.qml  HttpStatusWindow.qml  (+55 more)
